Se anexa las hojas de estilos

--- a/index.html
+++ b/index.html
@@ -9,8 +9,40 @@
 </head>
 <body>
 	<header id="header" class="">
-		<a href="mailto:ventas@rivya.com?subject=feedback" "email me">ventas@rivya.com</a>
+		<div>
+			<img src="" alt="Logotipo Rivya">
+		</div>
+		<div>
+			<i></i>
+			<p>¿Necesitas Información? Llámanos</p>
+		</div>
+		<div>
+			<i></i>
+			<a href="mailto:ventas@rivya.com?subject=feedback" "email me">ventas@rivya.com</a>
+			<p>(01) 753 53 2 1999</p>
+		</div>
 	</header>
 	<!-- /header -->
+	<main>
+		
+	</main>
+	<!-- /cuerpo principal -->
+	
+	<footer>
+		<div>
+			<img src="" alt="Logotipo de Rivya Blanco">
+		</div>
+		<div>
+			<p>Thamu 85, Fracc. Irekani,</p>
+			<p>C.P.60995 Lázaro Cárdenas,</p>
+			<p>Michoacán</p>
+			<p>Tel. 753 53 2 19 99</p>
+		</div>
+		<div>
+			<p>® Copyright 2018. Rivya Consulting Group.</p>
+			<p>Derechos reservados. Leer Aviso de Privacidad.</p>
+		</div>
+	</footer>
+	<!-- /pie de pagina -->
 </body>
 </html>
